# fcitx5-windows

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
patches/: fcitx5.patch
src/: CMakeLists.txt  main.cpp
win32/: CMakeLists.txt  checksum
win32/assets/: CMakeLists.txt
win32/dll/: CMakeLists.txt  main.cpp  register.cpp  register.h  util.cpp  util.h
win32/scripts/: format.ps1  install.ps1  lint.ps1  uninstall.ps1
win32/tests/: CMakeLists.txt  test_dll.cpp
win32/tsf/: CMakeLists.txt  CompositionSink.cpp  EditSession.cpp  KeyEventSink.cpp  TextEditSink.cpp  TextInputProcessorEx.cpp  ThreadMgrEventSink.cpp  tsf.cpp  tsf.h
